Fixed some styling to work better on 1080px screen spacing

--- a/global/styles/variables.css
+++ b/global/styles/variables.css
@@ -32,8 +32,8 @@
   --spacing-4xl: 80px;
   --spacing-5xl: 128px;
 
-  --container-max-width: 1440px;
-  --content-max-width: 1280px;
+  --container-max-width: 1080px;
+  --content-max-width: 1000px;
   --form-max-width: 680px;
   --border-radius-sm: 5px;
   --border-radius-md: 10px;
